--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "init": "^0.1.2",
         "laravel-vite-plugin": "^1.0",
+        "npx": "^10.2.2",
+        "tailwindcss": "^3.4.1",
         "vite": "^5.0"
     }
 }
